[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
crossbeam = "0.8.4"
dashmap = "6.1.0"
lazy_static = "1.5.0"
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
autoincrement = { version = "1", features = ["derive", "async"] }


[package.metadata.component]
package = "component:wasm-runtime"

[package.metadata.component.target.dependencies]
"wasi:io" = {path = "wit/deps/io"}
"wasi:clocks" = {path = "wit/deps/clocks"}
"wasi:sockets" = {path = "wit/deps/sockets"}