[package]
name = "timer-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
wasm-runtime = {path = "../../../"}

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:timer-wasm"


[package.metadata.component.target.dependencies]
"wasi:io" = {path = "wit/deps/io"}
"wasi:clocks" = {path = "wit/deps/clocks"}
